# mvsep-rs

./: .gitignore  README.en.md  README.ja.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.tauri-gdk/2.10.0/: loaders.cache
logs/: .ab44fc8796663d250ce431fa183fdb6de6b27d19-audit.json  .bdd6192cf57c167f50bc67555c4334c1b770ff5a-audit.json
scripts/: build-appimage.sh
scripts/pkgconfig/: gdk-pixbuf-2.0.pc
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: storage.ts  types.ts
src/app/contracts/: app-context.ts
src/app/controllers/: dom-events.ts
src/app/render/: about.ts  algorithms.ts  appearance.ts  cards.ts  home-page.ts  home.ts  logs.ts  settings.ts  tasks.ts
src/app/services/: tasks.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  zh-CN.json
src/themes/: index.ts
